--- a/config.org
+++ b/config.org
@@ -7,7 +7,7 @@
 * TABLE OF CONTENTS :toc:
 - [[#core][CORE]]
   - [[#elpaca-package-manager][Elpaca package manager]]
-  - [[#startup-performance][Startup Performance]]
+  - [[#startup-performance-and-stuff][Startup Performance and stuff]]
   - [[#file-limits][File limits]]
   - [[#encoding][Encoding]]
   - [[#there-shall-be-evil][There shall be EVIL]]
@@ -16,12 +16,17 @@
   - [[#font][Font]]
   - [[#helpful-commands][Helpful Commands]]
   - [[#magit][Magit]]
-  - [[#deminish][Deminish]]
+  - [[#diminish][Diminish]]
   - [[#rainbow-delimiters-and-mode][Rainbow Delimiters and Mode]]
+  - [[#undo-tree][Undo-tree]]
+  - [[#which-key][Which key]]
+  - [[#general-keybindings][General keybindings]]
 - [[#org-mode][ORG MODE]]
 - [[#programming][Programming]]
-  - [[#general-keybindings][General keybindings]]
+  - [[#projectile][Projectile]]
+  - [[#perspective][Perspective]]
   - [[#completion][Completion]]
+  - [[#treesitter][Treesitter]]
 
 * CORE
 
@@ -94,7 +99,7 @@
 #+end_src
 
 
-** Startup Performance
+** Startup Performance and stuff
 #+begin_src emacs-lisp
   ;; Profile emacs startup
   (add-hook 'emacs-startup-hook
@@ -108,6 +113,10 @@
   (setq comp-async-report-warnings-errors nil)
   ;; DISABLE INITIALIZATION WARNINGS
   (setq warning-minimum-level :emergency)
+    ;;; for lsp performance
+  (setq read-process-output-max (* 1024 1024)) ; TODO: find out what this is!
+
+  (setq ring-bell-function 'ignore)
 #+end_src
 
 
@@ -167,7 +176,9 @@ Emacs is bad with large files??
     (define-key evil-motion-state-map (kbd "TAB") nil))
   ;; Setting RETURN key in org-mode to follow links
   (setq org-return-follows-link  t)
+  (setq forge-add-default-bindings nil)
 #+end_src
+
 
 ** Basic UI/UX
 Make UI look minimal and modern.
@@ -214,11 +225,20 @@ NOTE: The first time you load your configuration on a new machine, you’ll need
   (use-package doom-themes
     :init (load-theme 'doom-one t))
 
-  (use-package all-the-icons)
+  (use-package all-the-icons
+    :ensure t
+    :if (display-graphic-p))
+
+  (use-package all-the-icons-dired
+    :hook (dired-mode . (lambda () (all-the-icons-dired-mode t))))
 
   (use-package doom-modeline
     :init (doom-modeline-mode 1)
-    :custom ((doom-modeline-height 15)))
+    :custom ((doom-modeline-height 15))
+    :config   (setq doom-modeline-height 35      ;; sets modeline height
+		    doom-modeline-bar-width 5    ;; sets right bar width
+		    doom-modeline-persp-name t   ;; adds perspective name to modeline
+		    doom-modeline-persp-icon t)) ;; adds folder icon next to persp name
 #+end_src
 
 ** Font
@@ -281,7 +301,7 @@ True and only
     (set-face-foreground 'git-gutter:deleted "LightCoral"))
 #+end_src
 
-** Deminish
+** Diminish
 
 #+begin_src emacs-lisp
   (use-package diminish)
@@ -297,6 +317,97 @@ True and only
   (use-package rainbow-mode
     :diminish
     :hook org-mode prog-mode)
+#+end_src
+
+** Undo-tree
+
+#+begin_src emacs-lisp
+  (use-package undo-tree
+    :ensure t
+    :config
+    (global-undo-tree-mode t)
+    (setq undo-tree-auto-save-history nil))
+#+end_src
+
+** Which key
+
+#+begin_src emacs-lisp
+  (use-package which-key
+    :ensure t
+    :init
+    (which-key-mode 1)
+    :config
+    (setq which-key-side-window-location 'bottom
+	  which-key-setup-minibuffer
+	  which-key-sort-order #'which-key-key-order-alpha
+	  which-key-sort-uppercase-first nil
+	  which-key-add-column-padding 1
+	  which-key-max-display-columns nil
+	  which-key-min-display-lines 6
+	  which-key-side-window-slot -10
+	  which-key-side-window-max-height 0.25
+	  which-key-idle-delay 0.3
+	  which-key-max-description-length 25
+	  which-key-allow-imprecise-window-fit t
+	  which-key-separator " → " ))
+#+end_src
+
+** General keybindings
+
+#+begin_src emacs-lisp
+
+  (use-package general
+    :config
+    (general-evil-setup)
+
+    ;; set up 'SPC' as the global leader key
+    (general-create-definer verde/leader-keys
+      :states '(normal insert visual emacs)
+      :keymaps 'override
+      :prefix "SPC" ;; set leader
+      :global-prefix "M-SPC") ;; access leader in insert mode
+
+    ;; general
+    (verde/leader-keys
+      "SPC" '(execute-extended-command :wk "Counsel M-x")
+      "=" '(perspective-map :wk "Worspace management") ;; Lists all the perspective keybindings
+      "q q" '(evil-quit :wk "Gtfo"))
+    ;; file navigation
+    (verde/leader-keys
+      "s" '(:ignore t :wk "Search")
+      "." '(find-file :wk "Find file")
+      "s s" '(consult-line :wk "Search line")
+      "s l" '(consult-goto-line :wk "Search line")
+      "s d" '(dictionary-search :wk "Search line")
+      )
+
+      (verde/leader-keys
+    "b" '(:ignore t :wk "Bookmarks/Buffers")
+    "b b" '(switch-to-buffer :wk "Switch to buffer")
+    "b c" '(clone-indirect-buffer :wk "Create indirect buffer copy in a split")
+    "b C" '(clone-indirect-buffer-other-window :wk "Clone indirect buffer in new window")
+    "b d" '(bookmark-delete :wk "Delete bookmark")
+    "b i" '(consult-buffer :wk "Ibuffer")
+    "b k" '(kill-current-buffer :wk "Kill current buffer")
+    "b K" '(kill-some-buffers :wk "Kill multiple buffers")
+    "b l" '(list-bookmarks :wk "List bookmarks")
+    "b m" '(bookmark-set :wk "Set bookmark")
+    "b n" '(next-buffer :wk "Next buffer")
+    "b p" '(previous-buffer :wk "Previous buffer")
+    "b r" '(revert-buffer :wk "Reload buffer")
+    "b R" '(rename-buffer :wk "Rename buffer")
+    "b s" '(basic-save-buffer :wk "Save buffer")
+    "b S" '(save-some-buffers :wk "Save multiple buffers")
+    "b w" '(bookmark-save :wk "Save current bookmarks to bookmark file"))
+    ;; magit
+    (verde/leader-keys
+      "g g" '(magit-status :wk "Git"))
+
+    ;; projectile
+    (verde/leader-keys
+      "p" '(projectile-command-map :wk "Projectile"))
+    )
+
 #+end_src
 
 * ORG MODE
@@ -323,73 +434,132 @@ True and only
 #+end_src
 
 * Programming
-** General keybindings
+
+** Projectile
 
 #+begin_src emacs-lisp
-;  (use-package general
-;    :config
-;    (general-evil-setup t))
-;  (general-create-definer verde/leader-key
-;			  :keymaps '(normal insert visual emacs)
-;			  :prefix "SPC")
-;
-;  (general-create-definer verde/local-leader-key
-;			  :states '(normal visual)
-;			  :keymaps 'override
-;
-;			  :prefix ",")
-;
-;  ;; TODO --> SET PREFIX FOR FILES, LSP
-;  ;; FIGURE OUT HOW TO USE LOCAL LEADER KEY FOR THIS
-;  (nvmap :prefix "SPC"
-;	 "SPC" '(counsel-M-x :wk "M-x")
-;	 "." '(find-file :wk "Find File")
-;	 ;; Buffers
-;	 "b"   '(:ignore t :wk "buffer")
-;	 "b b" 'ibuffer
-;	 "b k" 'kill-current-buffer
-;	 "b n" 'next-buffer
-;	 "b p" 'previous-buffer
-;	 "bB" '(ibuffer-list-buffers :wk "List buffers")
-;	 "bK" 'kill-buffer
-;	 ;; Eshell
-;	 "e"   '(:ignore t :wk "eshell")
-;	 "eh" '(counsel-esh-history :wk "[e]shell [h]istory")
-;	 "es" '(eshell :wk "[es]hell")
-;	 "f"   '(:ignore t :wk "format")
-;	 "fc" '(format-all-buffer :which-key "[f]ormat [c]ode")
-;	 "fr" '(format-all-region :which-key "[f]ormat [r]egion")
-;	 "hrr" '((lambda () (interactive) (load-file "~/.config/emacs/init.el")) :which-key "Reload emacs config")
-;	 ;; Terminal
-;	 "t"   '(:ignore t :wk "terminal")
-;	 "mt"  'multi-term
-;	 ;; Windows splits
-;	 "w"  '(:ignore t :wk "window")
-;	 "wc" '(evil-window-delete :wk "[w]indow [c]lose")
-;	 "wn" '(evil-window-new :wk "[w]indow [n]ew")
-;	 "wh" '(evil-window-split :wk "[w]indow [h]orizontal split")
-;	 "wv" '(evil-window-vsplit :wk "[w]indow [v]ertical split")
-;	 ;; Git
-;	 "g"   '(:ignore t :which-key "git")
-;	 "gs"  'magit-status
-;	 "gd"  'magit-diff-unstaged
-;	 "gc"  'magit-branch-or-checkout
-;	 "gl"   '(:ignore t :which-key "log")
-;	 "glc" 'magit-log-current
-;	 "glf" 'magit-log-buffer-file
-;	 "gb"  'magit-branch
-;	 "gP"  'magit-push-current
-;	 "gp"  'magit-pull-branch
-;	 "gf"  'magit-fetch
-;	 "gF"  'magit-fetch-all
-;	 "gr"  'magit-rebase
+  (use-package projectile
+    :config
+    (projectile-mode 1)
+    (setq projectile-sort-order 'recentf)
+    (setq projectile-enable-caching t)
+    (setq projectile-switch-project-action #'projectile-dired))
+#+end_src
 
-;	 )
+** Perspective
+
+#+begin_src emacs-lisp
+  (use-package perspective
+    :custom
+    ;; NOTE! I have also set 'SCP =' to open the perspective menu.
+    ;; I'm only setting the additional binding because setting it
+    ;; helps suppress an annoying warning message.
+    (persp-mode-prefix-key (kbd "C-c M-p"))
+    :init
+    (persp-mode)
+    :config
+    ;; Sets a file to write to when we save states
+    (setq persp-state-default-file "~/.config/emacs/sessions"))
+
+  ;; This will group buffers by persp-name in ibuffer.
+  (add-hook 'ibuffer-hook
+	    (lambda ()
+	      (persp-ibuffer-set-filter-groups)
+	      (unless (eq ibuffer-sorting-mode 'alphabetic)
+		(ibuffer-do-sort-by-alphabetic))))
+
+  ;; Automatically save perspective states to file when Emacs exits.
+  (add-hook 'kill-emacs-hook #'persp-state-save)
+
 #+end_src
 
 
 ** Completion
 
 #+begin_src emacs-lisp
+  (use-package corfu
+    :ensure t
+    :init
+    (global-corfu-mode)
+    :custom
+    (corfu-auto t)
+    (corfu-auto-delay 0)
+    (corfu-auto-prefix 0)
+    (corfu-auto-prefix 0))
+
+  (use-package vertico
+    :ensure t
+    :custom
+    (vertico-cycle t)
+    (read-buffer-completion-ignore-case t)
+    (read-file-name-completion-ignore-case t)
+    (completion-styles '(basic substring partial-completion flex orderless))
+
+    :init
+    (vertico-mode)
+    ;; Different scroll margin
+    ;; (setq vertico-scroll-margin 0)
+
+    ;; Show more candidates
+    (setq vertico-count 20)
+
+    ;; Grow and shrink the Vertico minibuffer
+    (setq vertico-resize t)
+
+    ;; Optionally enable cycling for `vertico-next` and `vertico-previous`.
+    (setq vertico-cycle t))
+
+  (use-package consult
+    :ensure t
+    :hook (completion-list-mode . consult-preview-at-point-mode)
+    :config
+    (setq read-buffer-completion-ignore-case t
+	  read-file-name-completion-ignore-case t
+	  completion-ignore-case t))
+
+  (use-package embark
+    :ensure t
+    :bind
+    (("C-." . embark-act)
+     ("C-;" . embark-dwim)
+     ("C-h B" . embark-bindings))
+    :init
+    (setq prefix-help-command #'embark-prefix-help-command)
+    (add-hook 'eldoc-documentation-functions #'embark-eldoc-first-target)
+    :config
+    (add-to-list 'display-buffer-alist
+		 '("\\'\\*Embark Collect \\(Live\\|Completions\\)\\*"
+		   nil
+		   (window-parameters (mode-line-format . none)))))
+
+  (use-package embark-consult
+    :ensure t
+    :hook
+    (embark-collect-mode . consult-preview-at-point-mode))
+
+  (use-package marginalia
+    :after vertico
+    :ensure t
+    :init
+    (marginalia-mode))
+
+  (use-package orderless
+    :ensure t
+    :init
+    ;; Configure a custom style dispatcher (see the Consult wiki)
+    ;; (setq orderless-style-dispatchers '(+orderless-consult-dispatch orderless-affix-dispatch)
+    ;;       orderless-component-separator #'orderless-escapable-split-on-space)
+    (setq completion-styles '(orderless basic)
+	  read-buffer-completion-ignore-case t
+	  completion-category-defaults nil
+	  completion-category-overrides '((file (styles partial-completion)))))
+#+end_src
+
+** Treesitter
+
+#+begin_src emacs-lisp
+
+  (use-package tree-sitter)
+  (use-package tree-sitter-langs)
 
 #+end_src
