--- a/config.org
+++ b/config.org
@@ -18,8 +18,10 @@
   - [[#magit][Magit]]
   - [[#diminish][Diminish]]
   - [[#rainbow-delimiters-and-mode][Rainbow Delimiters and Mode]]
+  - [[#sudo][Sudo]]
   - [[#undo-tree][Undo-tree]]
   - [[#which-key][Which key]]
+  - [[#dired][Dired]]
   - [[#general-keybindings][General keybindings]]
 - [[#org-mode][ORG MODE]]
 - [[#programming][Programming]]
@@ -319,6 +321,12 @@ True and only
     :hook org-mode prog-mode)
 #+end_src
 
+** Sudo
+
+#+begin_src emacs-lisp
+  (use-package sudo-edit)
+#+end_src
+
 ** Undo-tree
 
 #+begin_src emacs-lisp
@@ -337,19 +345,29 @@ True and only
     :init
     (which-key-mode 1)
     :config
-    (setq which-key-side-window-location 'bottom
-	  which-key-setup-minibuffer
-	  which-key-sort-order #'which-key-key-order-alpha
-	  which-key-sort-uppercase-first nil
-	  which-key-add-column-padding 1
-	  which-key-max-display-columns nil
-	  which-key-min-display-lines 6
-	  which-key-side-window-slot -10
-	  which-key-side-window-max-height 0.25
-	  which-key-idle-delay 0.3
-	  which-key-max-description-length 25
-	  which-key-allow-imprecise-window-fit t
+    (setq which-key-idle-delay 0.3
 	  which-key-separator " → " ))
+#+end_src
+
+** Dired
+
+#+begin_src emacs-lisp
+  (use-package dired-open
+    :config
+    (setq dired-open-extensions '(("gif" . "sxiv")
+				  ("jpg" . "sxiv")
+				  ("png" . "sxiv")
+				  ("mkv" . "mpv")
+				  ("mp4" . "mpv"))))
+
+  (use-package peep-dired
+    :after dired
+    :hook (evil-normalize-keymaps . peep-dired-hook)
+    :config
+    (evil-define-key 'normal dired-mode-map (kbd "h") 'dired-up-directory)
+    (evil-define-key 'normal dired-mode-map (kbd "l") 'dired-open-file) ; use dired-find-file instead if not using dired-open package
+    (evil-define-key 'normal peep-dired-mode-map (kbd "j") 'peep-dired-next-file)
+    (evil-define-key 'normal peep-dired-mode-map (kbd "k") 'peep-dired-prev-file))
 #+end_src
 
 ** General keybindings
@@ -381,31 +399,61 @@ True and only
       "s d" '(dictionary-search :wk "Search line")
       )
 
-      (verde/leader-keys
-    "b" '(:ignore t :wk "Bookmarks/Buffers")
-    "b b" '(switch-to-buffer :wk "Switch to buffer")
-    "b c" '(clone-indirect-buffer :wk "Create indirect buffer copy in a split")
-    "b C" '(clone-indirect-buffer-other-window :wk "Clone indirect buffer in new window")
-    "b d" '(bookmark-delete :wk "Delete bookmark")
-    "b i" '(consult-buffer :wk "Ibuffer")
-    "b k" '(kill-current-buffer :wk "Kill current buffer")
-    "b K" '(kill-some-buffers :wk "Kill multiple buffers")
-    "b l" '(list-bookmarks :wk "List bookmarks")
-    "b m" '(bookmark-set :wk "Set bookmark")
-    "b n" '(next-buffer :wk "Next buffer")
-    "b p" '(previous-buffer :wk "Previous buffer")
-    "b r" '(revert-buffer :wk "Reload buffer")
-    "b R" '(rename-buffer :wk "Rename buffer")
-    "b s" '(basic-save-buffer :wk "Save buffer")
-    "b S" '(save-some-buffers :wk "Save multiple buffers")
-    "b w" '(bookmark-save :wk "Save current bookmarks to bookmark file"))
+    (verde/leader-keys
+      "b" '(:ignore t :wk "Bookmarks/Buffers")
+      "b b" '(switch-to-buffer :wk "Switch to buffer")
+      "b c" '(clone-indirect-buffer :wk "Create indirect buffer copy in a split")
+      "b C" '(clone-indirect-buffer-other-window :wk "Clone indirect buffer in new window")
+      "b d" '(bookmark-delete :wk "Delete bookmark")
+      "b i" '(consult-buffer :wk "Ibuffer")
+      "b k" '(kill-current-buffer :wk "Kill current buffer")
+      "b K" '(kill-some-buffers :wk "Kill multiple buffers")
+      "b l" '(list-bookmarks :wk "List bookmarks")
+      "b m" '(bookmark-set :wk "Set bookmark")
+      "b n" '(next-buffer :wk "Next buffer")
+      "b p" '(previous-buffer :wk "Previous buffer")
+      "b r" '(revert-buffer :wk "Reload buffer")
+      "b R" '(rename-buffer :wk "Rename buffer")
+      "b s" '(basic-save-buffer :wk "Save buffer")
+      "b S" '(save-some-buffers :wk "Save multiple buffers")
+      "b w" '(bookmark-save :wk "Save current bookmarks to bookmark file"))
     ;; magit
     (verde/leader-keys
+      "g" '(:ignore t :wk "Git/Goto")
       "g g" '(magit-status :wk "Git"))
 
+    ;; magit
+    (verde/leader-keys
+      "h" '(:ignore t :wk "Help")
+      "h v" '(describe-variable :wk "Describe variable")
+      "h f" '(describe-function :wk "Describe variable")
+      "h r" '(:ignore t :wk "Reload")
+      "h r r" '((lambda () (interactive)
+		  (load-file "~/.config/emacs/init.el")
+		  (ignore (elpaca-process-queues)))
+		:wk "Reload emacs config"))
+
+    ;; files
+    (verde/leader-keys
+      "f" '(:ignore t :wk "Files")
+      "f r" '(consult-recent-file :wk "Recent files")
+      "f u" '(sudo-edit-find-file :wk "Sudo find file")
+      "f U" '(sudo-edit :wk "Sudo edit file")
+      "f c" '((lambda () (interactive)
+		(find-file "~/.config/emacs/config.org"))
+	      :wk "Open emacs config.org")
+      "f P" '((lambda () (interactive)
+		(dired "~/.config/emacs/"))
+	      :wk "Open user-emacs-directory in dired"))
     ;; projectile
     (verde/leader-keys
       "p" '(projectile-command-map :wk "Projectile"))
+
+    (verde/leader-keys
+      "d" '(:ignore t :wk "Dired")
+      "d d" '(dired :wk "Open dired")
+      "d j" '(dired-jump :wk "Dired jump to current")
+      "d p" '(peep-dired :wk "Peep-dired"))
     )
 
 #+end_src
@@ -513,11 +561,13 @@ True and only
     :ensure t
     :hook (completion-list-mode . consult-preview-at-point-mode)
     :config
+    (recentf-mode 1)
     (setq read-buffer-completion-ignore-case t
 	  read-file-name-completion-ignore-case t
 	  completion-ignore-case t))
 
   (use-package embark
+    :diminish
     :ensure t
     :bind
     (("C-." . embark-act)
@@ -533,6 +583,7 @@ True and only
 		   (window-parameters (mode-line-format . none)))))
 
   (use-package embark-consult
+    :diminish
     :ensure t
     :hook
     (embark-collect-mode . consult-preview-at-point-mode))
